fixing spacing issue found after hosting in netlify

--- a/css/index.css
+++ b/css/index.css
@@ -300,7 +300,7 @@ img {
 }
 .inverse-content {
   padding-bottom: 30px;
-  margin-left: 10%;
+  margin-left: 15%;
   width: 80%;
   display: flex;
   flex-direction: row;
@@ -317,7 +317,7 @@ img {
 .inverse-content .text-content {
   width: 40%;
   padding-right: 10%;
-  margin-left: 10%;
+  margin-left: 5%;
 }
 @media (max-width: 500px) {
   .inverse-content .text-content {
@@ -328,7 +328,8 @@ img {
 }
 .inverse-content .text-content .img-content {
   width: 48%;
-  padding-left: 15%;
+  padding-left: 20%;
+  margin-left: 2%;
 }
 @media (max-width: 500px) {
   .inverse-content .text-content .img-content {
