--- a/less/home-page.less
+++ b/less/home-page.less
@@ -101,7 +101,7 @@
 
   .inverse-content {
     padding-bottom: 30px;
-    margin-left: 10%;
+    margin-left: 15%;
     width: 80%;     
     display: flex;
     flex-direction: row;   
@@ -117,7 +117,7 @@
     .text-content {
       width: 40%;
       padding-right: 10%;
-      margin-left: 10%;
+      margin-left: 5%;
        
 
       @media @mobile {
@@ -127,7 +127,8 @@
 
     .img-content {
       width: 48%;
-      padding-left: 15%;
+      padding-left: 20%;
+      margin-left: 2%;
 
       @media @mobile {
         .flex-box();
